Deletar um registro especifico

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         <section class="container mt-5 mb-3">
             <div class="row">
                 <div class="col">
-                    <button class="btn btn-outline-dark" onclick="addRegistro()">Adicionar Registro</button>
-                    <button class="btn btn-outline-dark" onclick="salvaRegistros()">Salvar Registros</button>
+                    <button class="btn btn-outline-dark m-2" onclick="addRegistro()">Adicionar Registro</button>
+                    <button class="btn btn-outline-dark m-2" onclick="salvaRegistros()">Salvar Registros</button>
                 </div>
                 <div class="col">
-                    <button class="btn btn-outline-dark" onclick="limpaRegistros()">Limpar Registros</button>
+                    <button class="btn btn-outline-dark m-2 " onclick="limpaRegistros()">Limpar Registros</button>
                 </div>
-                <div class="col-md-auto">
-                    <button class="btn btn-outline-dark">Exportar Registros</button>
-                    <button class="btn btn-outline-dark">Importar Registros</button>
+                <div class="col">
+                    <button class="btn btn-outline-dark float-end m-2">Exportar Registros</button>
+                    <button class="btn btn-outline-dark float-end m-2">Importar Registros</button>
                 </div>
             <div class="mt-3"><h1>Registros: </h1></div>
             </div>
