--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     <button class="btn btn-outline-dark m-2 " onclick="limpaRegistros()">Limpar Registros</button>
                 </div>
                 <div class="col">
-                    <button class="btn btn-outline-dark float-end m-2">Exportar Registros</button>
-                    <button class="btn btn-outline-dark float-end m-2">Importar Registros</button>
+                    <button class="btn btn-outline-dark float-end m-2" onclick="exportarRegistros()">Exportar Registros</button>
+                    <label for="import" class="btn btn-outline-dark float-end m-2"><input style="display: none;" type="file" name="import" id="import" accept=".json" onchange="importarRegistros()">Importar Registros</label> 
                 </div>
             <div class="mt-3"><h1>Registros: </h1></div>
             </div>
